@@ -131,8 +131,18 @@
     content: "\f0c9";
 }
 
+.tree-collectioncontainer button:before {
+    content: "\f0c9";
+    font-family: FontAwesome;
+}
+
 .selectioncontainer:before {
     content: "\f005";
+}
+
+.tree-selectioncontainer button:before {
+    content: "\f005";
+    font-family: FontAwesome;
 }
 
 .icon-collectioncontainer .x-tree-node-icon {
